--- a/about.html
+++ b/about.html
@@ -60,8 +60,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>About</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
+        <h2>Get To Know Me!</h2>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -70,31 +69,31 @@
         <div class="row align-items-center justify-content-between gy-5 mb-5">
           <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
             <div class="intro-content">
-              <span class="eyebrow">Hello there</span>
-              <h2 class="headline">Hi, I'm Brandon - a calm-minded creative developer crafting serene digital journeys</h2>
+              <h2 class="headline">I'm very passionate about networks and always curious about how systems connect and perform.</h2>
               <p class="lead">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus. Sed interdum, nunc non feugiat tempor, orci lorem luctus ligula, vitae rutrum nisl lorem non nulla.
+                I’ve been building my skills in network engineering, architecture, and cloud solutions through academic projects, labs, and continuous learning.
               </p>
               <p>
-                Integer posuere lacus in mi fringilla, eget luctus risus pulvinar. Curabitur a arcu a nisl tempus sagittis. Aenean varius, tortor sed porttitor dictum, augue eros viverra lectus, at efficitur magna lacus in risus.
+                What excites me most is designing secure and reliable systems that actually make technology simpler for people.
               </p>
+              <p>I’m still growing, still exploring, and always eager to push my knowledge further into real-world challenges.</p>
 
               <div class="cta-group">
-                <a href="#portfolio" class="btn-ghost">
+                <a href="resume.html" class="btn-ghost">
                   View My Work <i class="bi bi-arrow-up-right"></i>
                 </a>
-                <a href="#" class="link-underline">
-                  Download Resume <i class="bi bi-download"></i>
+                <a href="contact.html" class="link-underline">
+                  Get in Touch <i class="bi bi-download"></i>
                 </a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="250">
+<!--           <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="250">
             <figure class="profile-figure text-center text-lg-end">
               <img src="assets/img/profile/profile-square-11.webp" alt="Portrait of Alex" class="img-fluid profile-photo">
             </figure>
-          </div>
+          </div> -->
         </div>
         <!-- End Intro + Photo -->
 
@@ -103,15 +102,15 @@
           <div class="row g-4">
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="120">
               <div class="skill-item">
-                <i class="bi bi-layout-text-window"></i>
-                <h3>UI/UX</h3>
-                <p>Vivamus sagittis lacus molestie placerat.</p>
+                <i class="bi bi-hdd-rack"></i>
+                <h3>System Infrastructure and Administration</h3>
+                <p>I've been learning the entire IT infrastructure. From Systems, Processes, operations and security to ensure the systems are safely inter-connected and working correctly.</p>
               </div>
             </div>
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="180">
               <div class="skill-item">
                 <i class="bi bi-code-slash"></i>
-                <h3>React.js</h3>
+                <h3>Networks Adminstration</h3>
                 <p>Maecenas pharetra magna sit amet risus.</p>
               </div>
             </div>
