--- a/about.html
+++ b/about.html
@@ -63,8 +63,7 @@
         <h2>Get To Know Me!</h2>
       </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-      <center>
+      <div class="container" data-aos="fade-up" data-aos-delay="100" style="display: flex; align-items: center; justify-content: center;">
         <!-- Intro + Photo -->
         <div class="row align-items-center justify-content-between gy-5 mb-5">
           <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
@@ -88,7 +87,6 @@
               </div>
             </div>
           </div>
-          </center>
 
 <!--           <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="250">
             <figure class="profile-figure text-center text-lg-end">
@@ -107,19 +105,19 @@
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="120">
               <div class="skill-item">
                 <i class="bi bi-hdd-rack"></i>
-                <h2>System Infrastructure and Administration</h2>
+                <h3>System Infrastructure and Administration</h3>
               </div>
             </div>
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="180">
               <div class="skill-item">
                 <i class="bi bi-router-fill"></i>
-                <h2>Networks Adminstration</h2>
+                <h3>Networks Adminstration</h3>
               </div>
             </div>
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="240">
               <div class="skill-item">
                 <i class="bi bi-hdd-network-fill"></i>
-                <h2>Network Architecture</h2>
+                <h3>Network Architecture</h3>
               </div>
             </div>
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="300">
