--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
         <h2>Get To Know Me!</h2>
       </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100" style="display: flex; align-items: center; justify-content: center;">
+      <div class="container" data-aos="fade-up" data-aos-delay="100" style="align-items: center; justify-content: center;">
         <!-- Intro + Photo -->
         <div class="row align-items-center justify-content-between gy-5 mb-5">
           <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
