--- a/about.html
+++ b/about.html
@@ -63,21 +63,21 @@
         <h2>Get To Know Me!</h2>
       </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100" style="align-items: center; justify-content: center;">
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
         <!-- Intro + Photo -->
         <div class="row align-items-center justify-content-between gy-5 mb-5">
           <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
             <div class="intro-content">
-              <h2 class="headline">I'm very passionate about networks and always curious about how systems connect and perform.</h2>
-              <p class="lead">
+              <h2 class="headline" style="align-items: center;">I'm very passionate about networks and always curious about how systems connect and perform.</h2>
+              <p class="lead" style="align-items: center;">
                 I’ve been building my skills in network engineering, architecture, and cloud solutions through academic projects, labs, and continuous learning.
               </p>
-              <p>
+              <p style="align-items: center;">
                 What excites me most is designing secure and reliable systems that actually make technology simpler for people.
               </p>
-              <p>I’m still growing, still exploring, and always eager to push my knowledge further into real-world challenges.</p>
+              <p style="align-items: center;">I’m still growing, still exploring, and always eager to push my knowledge further into real-world challenges.</p>
 
-              <div class="cta-group">
+              <div class="cta-group" style="align-items: center;">
                 <a href="resume.html" class="btn-ghost">
                   View My Work <i class="bi bi-arrow-up-right"></i>
                 </a>
