--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
+       
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -74,55 +74,19 @@
 
               <div class="resume-content">
                 <article class="education-item">
-                  <h4>Master of Computer Science</h4>
-                  <h5>2019 - 2021</h5>
-                  <p class="institution"><em>Stanford University, California</em></p>
-                  <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+                  <h4>BSc. Networks and Communication Systems</h4>
+                  <h5>2022 - Present</h5>
+                  <p class="institution"><em>Adventist University of Central Africa</em></p>
                 </article>
 
-                <article class="education-item">
+<!--                 <article class="education-item">
                   <h4>Bachelor of Computer Science</h4>
                   <h5>2015 - 2019</h5>
                   <p class="institution"><em>Massachusetts Institute of Technology</em></p>
                   <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis delectus nihil temporibus sapiente</p>
-                </article>
+                </article> -->
               </div>
             </div><!-- End Education Section -->
-
-            <!-- Professional Skills Section -->
-            <div class="resume-item skills-animation" data-aos="fade-up">
-              <h3 class="resume-title">Professional Skills</h3>
-
-              <div class="resume-content">
-                <div class="skill-item">
-                  <h4>Frontend Development</h4>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </div>
-
-                <div class="skill-item">
-                  <h4>Backend Development</h4>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </div>
-
-                <div class="skill-item">
-                  <h4>UI/UX Design</h4>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </div>
-
-                <div class="skill-item">
-                  <h4>Project Management</h4>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </div>
-              </div>
-            </div><!-- End Professional Skills Section -->
           </div>
 
           <div class="col-lg-6">
@@ -181,20 +145,7 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">FolioOne</strong> <span>All Rights Reserved<br></span></p>
-      </div>
-      <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">JuliusN</strong> <span> - All Rights Reserved<br></span></p>
       </div>
     </div>
 
