--- a/resume.html
+++ b/resume.html
@@ -79,12 +79,11 @@
                   <p class="institution"><em>Adventist University of Central Africa</em></p>
                 </article>
 
-<!--                 <article class="education-item">
-                  <h4>Bachelor of Computer Science</h4>
-                  <h5>2015 - 2019</h5>
-                  <p class="institution"><em>Massachusetts Institute of Technology</em></p>
-                  <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis delectus nihil temporibus sapiente</p>
-                </article> -->
+               <article class="education-item">
+                  <h4>Cloud Computing</h4>
+                  <h5>May 2024 - December 2024</h5>
+                  <p class="institution"><em>ALX Africa</em></p>
+                </article> 
               </div>
             </div><!-- End Education Section -->
           </div>
