--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
             <div class="contact-form" data-aos="fade-up" data-aos-delay="300">
               <h3>Get In Touch!</h3>
 
-              <form action="#" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+              <form action="#" method="#" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
                 <div class="row gy-4">
 
                   <div class="col-md-6">
