--- a/resume.html
+++ b/resume.html
@@ -95,18 +95,16 @@
 
               <div class="resume-content">
                 <article class="experience-item">
-                  <h4>Senior Software Engineer</h4>
-                  <h5>2021 - Present</h5>
-                  <p class="company"><em>Google, Mountain View, CA</em></p>
+                  <h4>Network and Communications Intern</h4>
+                  <h5>Jan 2025 - June 2025</h5>
+                  <p class="company"><em>Rwanda Development Board (RDB)</em></p>
                   <ul>
-                    <li>Lead in the development, implementation, and optimization of web applications using modern technologies</li>
-                    <li>Delegate tasks to the 7 members of the development team and provide counsel on all aspects of the project</li>
-                    <li>Supervise the assessment of all web applications, mobile apps, and software platforms for quality and efficiency</li>
-                    <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                    <li>Was part of a team that performed Network Maintenance, ensuring systems are inter-connected always</li>
+                    <li>Maintained the company communication channel through robust implementation of the company's corporate communication channels</li>
                   </ul>
                 </article>
 
-                <article class="experience-item">
+<!--                 <article class="experience-item">
                   <h4>Software Engineer</h4>
                   <h5>2019 - 2021</h5>
                   <p class="company"><em>Microsoft, Redmond, WA</em></p>
@@ -116,19 +114,8 @@
                     <li>Recommended and consulted with clients on the most appropriate software platforms</li>
                     <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
                   </ul>
-                </article>
-
-                <article class="experience-item">
-                  <h4>Junior Software Developer</h4>
-                  <h5>2017 - 2019</h5>
-                  <p class="company"><em>Apple Inc., Cupertino, CA</em></p>
-                  <ul>
-                    <li>Implemented responsive websites and web applications using modern JavaScript frameworks</li>
-                    <li>Collaborated with senior developers to maintain and optimize existing applications</li>
-                    <li>Participated in code reviews and contributed to team documentation efforts</li>
-                    <li>Assisted in the development of RESTful APIs and microservices</li>
-                  </ul>
-                </article>
+                </article> -->
+                
               </div>
             </div><!-- End Experience Section -->
           </div>
