--- a/about.html
+++ b/about.html
@@ -68,16 +68,16 @@
         <div class="row align-items-center justify-content-between gy-5 mb-5">
           <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
             <div class="intro-content">
-              <h2 class="headline" style="align-items: center;">I'm very passionate about networks and always curious about how systems connect and perform.</h2>
-              <p class="lead" style="align-items: center;">
+              <h2 class="headline">I'm very passionate about networks and always curious about how systems connect and perform.</h2>
+              <p class="lead">
                 I’ve been building my skills in network engineering, architecture, and cloud solutions through academic projects, labs, and continuous learning.
               </p>
-              <p style="align-items: center;">
+              <p>
                 What excites me most is designing secure and reliable systems that actually make technology simpler for people.
               </p>
-              <p style="align-items: center;">I’m still growing, still exploring, and always eager to push my knowledge further into real-world challenges.</p>
+              <p>I’m still growing, still exploring, and always eager to push my knowledge further into real-world challenges.</p>
 
-              <div class="cta-group" style="align-items: center;">
+              <div class="cta-group">
                 <a href="resume.html" class="btn-ghost">
                   View My Work <i class="bi bi-arrow-up-right"></i>
                 </a>
@@ -88,11 +88,6 @@
             </div>
           </div>
 
-<!--           <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="250">
-            <figure class="profile-figure text-center text-lg-end">
-              <img src="assets/img/profile/profile-square-11.webp" alt="Portrait of Alex" class="img-fluid profile-photo">
-            </figure>
-          </div> -->
         </div>
         <!-- End Intro + Photo -->
      <!-- Quote -->
@@ -138,7 +133,7 @@
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="120">
             <div class="fact-pill">
               <i class="bi bi-dribbble"></i>
-              <span>Arsenal</span>
+              <span>Football</span>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="160">
