--- a/about.html
+++ b/about.html
@@ -124,38 +124,6 @@
           </div>
         </div>
         <!-- End Skills Grid -->
-        <blockquote class="personal-quote text-center mb-5" data-aos="fade-down" data-aos-delay="200">
-          <p>"And....You know!"</p>
-          <p>"I have some hobbies as well, 😎"</p>
-        </blockquote>
-        <!-- Fun Facts -->
-        <div class="row g-3 justify-content-center">
-          <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="120">
-            <div class="fact-pill">
-              <i class="bi bi-dribbble"></i>
-              <span>Football</span>
-            </div>
-          </div>
-          <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="160">
-            <div class="fact-pill">
-              <i class="bi bi-headphones"></i>
-              <span>Music</span>
-            </div>
-          </div>
-          <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="200">
-            <div class="fact-pill">
-              <i class="bi bi-geo-alt"></i>
-              <span>City Walks</span>
-            </div>
-          </div>
-          <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="240">
-            <div class="fact-pill">
-              <i class="bi bi-brush"></i>
-              <span>Sketching</span>
-            </div>
-          </div>
-        </div>
-        <!-- End Fun Facts -->
 
       </div>
 
@@ -198,9 +166,9 @@
 
           <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
             <div class="skill-box">
-              <h3>Networks and Electronics Engineering</h3>
-<!--               <p>Neque porro quisquam est qui dolorem ipsum quia dolor.</p> -->
-              <span class="text-end d-block">55%</span>
+              <h3>Programminh</h3>
+             <p>I have a strong foundation in C, Java, and Python</p> 
+              <span class="text-end d-block">70%</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
