--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="content">
                   <h4>Email Address</h4>
-                  <p>njulius@gmail.com</p>
+                  <p>nayebarejulius8@gmail.com</p>
                 </div>
               </div>
             </div>
