--- a/about.html
+++ b/about.html
@@ -166,7 +166,7 @@
 
           <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
             <div class="skill-box">
-              <h3>Programminh</h3>
+              <h3>Programming</h3>
              <p>I have a strong foundation in C, Java, and Python</p> 
               <span class="text-end d-block">70%</span>
               <div class="progress">
