--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>NAYEBARE Julius - My Personal Portfolio|Contact Me</title>
+  <title>NAYEBARE Julius - Personal Portfolio|Contact Me</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
