--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>NAYEBARE Julius - Personal Portfolio|Get To Know Me!</title>
+  <title>NAYEBARE Julius - My Personal Portfolio|Get To Know Me!</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
