--- a/resume.html
+++ b/resume.html
@@ -99,7 +99,7 @@
                   <h5>Jan 2025 - June 2025</h5>
                   <p class="company"><em>Rwanda Development Board (RDB)</em></p>
                   <ul>
-                    <li>Was part of a team that performed Network Maintenance, ensuring systems are inter-connected always</li>
+                    <li>I Was part of a team that performed Network Maintenance, ensuring systems are inter-connection always</li>
                     <li>Maintained the company communication channel through robust implementation of the company's corporate communication channels</li>
                   </ul>
                 </article>
